--- a/lab5/.vscode/settings.json
+++ b/lab5/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "iostream": "cpp"
   }
 }
